--- a/style.css
+++ b/style.css
@@ -9,9 +9,12 @@ html, body {
 
 canvas {
     /* Al reducir esto la imagen se ve mal */
-    width:75%; 
+    width:100%; 
     height:100%;
     margin:0;
+}
+#canvas-container {
+  width:75%;
 }
 #app-page{
     width: 100%;
