--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
 #login-page {
     margin: auto;
     padding: 10px;
-    background-color: #04AA6D;
+    background-color: rgb(25, 25, 25);
     width:100%;
     height:100%;
 }
@@ -160,7 +160,18 @@ canvas {
     overflow-x: hidden;
     overflow-y: auto;
   }
+  #welcome-msg {
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 70px;
+    color: white;
+    background: rgba(47, 14, 14, 0.5);
+    border-radius: 10px;
+  }
+
   .chat_input {
+    background-color: #1e152a;
+    opacity: 0.90;
     display: flex;
     flex-direction: row;
     width:auto;
